--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:theme="@style/Theme.JobDongSani_Android">
         <activity
             android:name=".MainActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".view.SignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
