[ADD] Barcode Activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
     // Navigation Fragment
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+
+    // Barcode
+    implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
 }
