--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="kr.hs.dgsw.jobdongsani_android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,19 +13,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JobDongSani_Android">
         <activity
+            android:name=".view.BarcodeActivity"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:exported="true" />
+        <activity
             android:name=".view.SignUpActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
-        <activity
-            android:name=".view.SignInActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.SignInActivity"
+            android:exported="true">
+
+        </activity>
     </application>
+
 </manifest>
