--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="kr.hs.dgsw.jobdongsani_android">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,17 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JobDongSani_Android">
         <activity
-            android:name=".view.BarcodeActivity"
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
-            android:stateNotNeeded="true"
-            android:windowSoftInputMode="stateAlwaysHidden"
+            tools:replace="screenOrientation" />
+        <activity
+            android:name=".view.BarcodeActivity"
             android:exported="true" />
         <activity
             android:name=".view.SignUpActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
 
         </activity>
         <activity
