--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,10 @@ dependencies {
 
     // Barcode
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
+
+    // Room
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+    implementation "androidx.room:room-rxjava2:2.3.0"
+
 }
